--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "prepare": "yarn build:dist"
   },
   "devDependencies": {
-    "@nestjs/common": "7.4.4",
-    "@nestjs/core": "7.4.4",
-    "@nestjs/testing": "7.4.4",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/testing": "^7.4.4",
     "@types/jest": "26.0.14",
     "@types/node": "14.10.2",
     "@types/twilio": "^2.11.0",
