--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.4.4",
+    "@nestjs/core": "^7.5.1",
     "@nestjs/testing": "^7.4.4",
     "@types/jest": "26.0.14",
     "@types/node": "14.10.2",
@@ -62,5 +62,10 @@
     "ts-jest": "26.3.0",
     "twilio": "3.49.1",
     "typescript": "4.0.2"
-  }
+  },
+    "peerDependencies": {
+    "@nestjs/common": "^7.5.1",
+    "@nestjs/core": "^7.5.1",
+    "twilio": "^3.63.0"
+  },
 }
